chore: use removeFirst instead of remove index 0